<resources>
    <string name="new_map_key">AIzaSyDlikeRhEoWMqBn9ZkOH6ZWBwPT6ETSLvU</string>
    <string name="checkout_ui_callback_scheme">checkoutui</string>


    <string name="app_name">City Tattersalls</string>
    <string name="default_notification_channel_id">123</string>
    <string name="channel_name">channel_name1</string>
    <string name="channel_description">channel_description1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exit_msg">Are you sure you want to exit from the app.</string>

    <string-array name="state_code_array">
        <item>@string/nsw</item>
        <item>@string/vic</item>
        <item>@string/qld</item>
        <item>@string/sa</item>
        <item>@string/tas</item>
        <item>@string/wa</item>
    </string-array>
    <string-array name="status_array">
        <item>1 Year</item>
        <item>3 Year</item>
        <item>5 Year</item>
    </string-array>
    <string name="tab_pick_a_box">Pick a box</string>
    <string name="tab_what_you_win">What you win</string>
    <string name="tab_my_prizes">My Prizes</string>
    <!-- common -->
    <string name="google_play_store_url">https://play.google.com/store/apps/details?id=com.citytratters</string>
    <string name="update_msg">A new version of City Tattersalls is available. Please update to version </string>
    <string name="update">Update now</string>
    <string name="loading">Loading..</string>
    <string name="no_network_message">No Internet connection. Please try later!</string>
    <string name="request_timed_out_message">Unable to connect to server. Please check internet connection and try again.</string>
    <string name="server_error">Some server error occurred. Please try again later.</string>
    <string name="internal_error">Some internal error occurred. Please try again later.</string>
    <string name="response_error_message_for_inactive_user">Your account is inactive</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Error -->
    <string name="enter_email">Enter membership number</string>
    <string name="enter_correct_email">Enter correct email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="enter_valid_contact_number">Enter valid contact number</string>
    <string name="enter_occupation">Enter occupation</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_state_code">Enter state code</string>
    <string name="enter_postal_code">Enter postal code</string>

    <string name="home">Home</string>
    <string name="nsw">NSW</string>
    <string name="vic">VIC</string>
    <string name="qld">QLD</string>
    <string name="sa">SA</string>
    <string name="tas">TAS</string>
    <string name="wa">WA</string>

    <string name="order_history">Order History</string>
    <string name="add_dealer">Add Dealer</string>
    <string name="dealer">Dealer</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="logout_conformation_msg">Are you sure you want to sign out?</string>
    <string name="developed_by">Designed and developed by</string>
    <string name="newstar_infotech">Newstar Infotech</string>

    <string name="version">Version : </string>
    <string name="dashboard">Dashboard</string>
    <string name="members_card">Members Card</string>
    <string name="eat_and_drink">Eat And Drink</string>
    <string name="what_s_on">What\'s On</string>
    <string name="entertainment">Entertainment</string>
    <string name="entertainment_condition">entertainment</string>
    <string name="entertainment_enter">Entertainment</string>
    <string name="promotion">Promotion</string>
    <string name="vouchers">Vouchers</string>
    <string name="contact">Contact</string>
    <string name="setting">Settings</string>
    <string name="signin">Sign In</string>
    <string name="your_email">Your Email</string>
    <string name="reward_member">Reward Member</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="digital_member_s_card">Digital Member\'s Card</string>
    <string name="order_food_and_drink">Order Food And Drink</string>
    <string name="member_s_card">Members Card</string>
    <string name="dummy_text">Neque porro quisquam est qui dolorem</string>
    <string name="membership_details">Membership Details</string>
    <string name="logout_text">Are you sure you want to logout?</string>

    <string name="first_name_col">First Name :</string>
    <string name="last_name_col">Last Name :</string>
    <string name="email_col">Email :</string>
    <string name="address_col">Address :</string>
    <string name="membership_tier_col">Membership Tier :</string>
    <string name="total_points">Total Points</string>
    <string name="save_to_google_wallet">Save to google wallet</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="signin_to_access_account">Sign in to access account</string>
    <string name="try_touch_id">Try Touch ID</string>
    <string name="signin_with_face_id">Sign in with face id</string>
    <string name="signin_with_username_and_password">Sign in with username and password</string>
    <string name="verify">Verify</string>
    <string name="contact_no_col">Contact Number :</string>
    <string name="member_s_id">Member\'s id</string>
    <string name="detail_successfully_updated">Detail successfully updated</string>
    <string name="update_details">Update Details</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_number_hint">Contact number (e.g 0420423833)</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="enter_valid_otp">PLease enter valid OTP.</string>
    <string name="otp_verification_failed_please_enter_correct_one">OTP verification failed please enter correct one.</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="state_code">State Code</string>
    <string name="postal_code">Postal Code</string>
    <string name="submit">Submit</string>
    <string name="membership_card">Membership Card</string>
    <string name="value">Value</string>
    <string name="mobile_number_col">Mobile Number :</string>
    <string name="mobile_col">Mobile :</string>
    <string name="mobile">Mobile</string>
    <string name="membership_number">Membership Number</string>
    <string name="not_you_signin">NOT YOU ? LOGIN WITH MEMBER NO.</string>
    <string name="suburb">Suburb</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_a_verification_code_to_your_n_mobile_number_please_enter_below">We have sent a verification code to your \n mobile number. Please enter below</string>
    <string name="member_id">Member ID</string>
    <string name="sign_in">Sign In</string>
    <string name="please_verify_your_identity_to_continue_using_your_device_s_credential">Please verify your identity to continue using your device\'s credential</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Logout</string>
    <string name="dining">Dining</string>
    <string name="function_n_amp_events">Functions &amp; Events</string>
    <string name="function_amd_events">Functions &amp; Events</string>
    <string name="membership">Membership</string>
    <string name="contact_us">Contact Us</string>
    <string name="digital_members_card">Digital Members Card</string>
    <string name="dining_fragment">Dining Fragment</string>
    <string name="book_now">book now</string>
    <string name="overview">Overview</string>
    <string name="gallery">Gallery</string>
    <string name="online_menu">Online Menu</string>
    <string name="offers">Offers</string>
    <string name="pick_a_box">Pick A Box</string>
    <string name="more_info">More Info</string>
    <string name="no_data_found">No Data Found</string>
    <string name="you_are_currently_not_a_member">you are currently not a member</string>
    <string name="please_fill_out_the_below">Please fill out the below</string>
    <string name="first_name">First name</string>
    <string name="first_nam">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="email_cap">EMAIL</string>
    <string name="addresscap">ADDRESS</string>
    <string name="membership_type">MEMBERSHIP TYPE</string>
    <string name="recieve_offer">RECIEVE OFFER</string>
    <string name="continue_playing">Continue playing</string>
    <string name="view_my_cart">View my cart</string>

    <string name="simply_tap_box_to_reveal_your_prize">Simply tap a box to reveal your prize</string>
    <string name="pick_a_box_3_times">Pick a box 3 times a day to win prizes,coupons,\n vouchers &amp; more.</string>
    <string name="oh_no_text">Oh no! Unfortunately you\'ve run out of chances today!\nTry again tomorrow for another chance</string>
    <string name="tearms_and_condition_apply_please_see_reception_for_further_details">Tearms and Condition apply. Please see reception for further details.</string>
    <string name="welcome">Welcome</string>
    <string name="congratulations">Congratulations</string>
    <string name="try_again">Try again</string>
    <string name="redeem">Redeem</string>
    <string name="already_redeemed_this_voucher">You have already redeemed this voucher.</string>
    <string name="voucher_expired">voucher is expired.</string>
    <string name="state">State</string>
    <string name="must_be_over_one">Must be over 18 to redeem. Once per person per day. Further terms and condition apply. Please speak to </string>
    <string name="must_be_over_two">reception staff.</string>
    <string name="t_and_c_apply">Terms and Conditions apply. Please see reception for further details.</string>
    <string name="temporerily_unavailable_noffer_is_only_available_during_nschedule_time_nplease_try_again_later">TEMPORERILY UNAVAILABLE \nOFFER IS ONLY AVAILABLE DURING \nSCHEDULE TIME. \nPLEASE TRY AGAIN LATER.</string>
    <string name="keep_up_to_date_via_email">Keep up to date via email</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="payment">Payment</string>
    <string name="fees_detail">Fees detail</string>
    <string name="pay_now">Pay now</string>
    <string name="amount_due">Amount Due :</string>
    <string name="amount_gst">Amount GST :</string>
    <string name="total_amount">Amount Total :</string>
    <string name="expire_date">Expire Date :</string>
    <string name="mobile_eg_0420423833">MOBILE (eg. 0420423833)</string>
    <string name="table_ordering">Table Ordering</string>
    <string name="promocodecap">PROMOCODE</string>
    <string name="renewal">Renewal</string>
    <string name="i_agree_to_all_the">I agree to all the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>

</resources>
