<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_gray_win_prize"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ivWinner"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/congratulations"
            android:textColor="@color/black"
            android:fontFamily="@font/segoe_normal"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvYouWon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            tools:text="You have won!" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/continue_playing"
                android:fontFamily="@font/segoe_bold"
                android:textColor="@color/black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="40dp"
                android:background="@color/line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViewCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/segoe_bold"
                android:text="@string/view_my_cart"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>