<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="25dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_kai_regular"
            android:text="@string/welcome_back"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/signin_to_access_account"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoint"
            android:layout_width="270dp"
            android:layout_height="300dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:gravity="center"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/please_verify_your_identity_to_continue_using_your_device_s_credential"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:layout_gravity="center" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/light_blue"
                       android:layout_marginStart="12dp"
                        android:src="@drawable/svg_smile" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                       android:layout_marginStart="12dp"
                        app:tint="@color/light_blue"


                        android:src="@drawable/svg_fingerprint" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:tint="@color/light_blue"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/svg_password" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvVerify"
                        android:layout_width="120dp"
                        android:paddingTop="8dp"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingStart="18dp"
                        android:paddingEnd="18dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:text="@string/verify"
                        android:background="@drawable/cd_primary_box_with_corner"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLoginWithUserNameAndPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <TextView
            android:id="@+id/tvLoginWithUserNameAndPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_you_signin"
            android:textColor="@color/colorPrimaryDark"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center"
            android:fontFamily="@font/bebas_kai_regular"
            android:textAllCaps="true"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>
