<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llFragmentBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    android:orientation="vertical"
    android:paddingTop="61dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_kai_regular"
                android:text="@string/vouchers"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/dummy_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/cd_white_box_with_top_corner">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvOffer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingTop="32dp"
                    android:paddingEnd="16dp"
                    tools:listitem="@layout/row_bar_list" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            <LinearLayout
                android:id="@+id/llNoData"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_kai_regular"
                    android:text="@string/no_data_found"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
